@startuml

class Bus {
    -id: Long
    -seats: int
}

class Person {
    -id: Long
    -firstName: String
    -lastName: String
    -telNr: String
}

class Trip {
  - id: Long
  - destination: Destination
  - bus: Bus
}

class Destination {
   - id: Long
   - street: String
   - streetNo: int
   - place: String
   - zip: int
}

class Booking {
  - id: Long
  - person: Person
  - trip: Trip
}

Trip  "*" --> "1" Destination : Reise geht nach >
Trip "1" --> "1" Bus : Reise wird mit Bus durchgeführt >
Booking "*" --> "1" Trip : hat Buchungen <
Person "*" <-- "1"  Booking : bucht Reise (Trip) >

@enduml
